force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <description>This field is populated by a trigger depending on if the Platinum Rep is populated on the related Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>