force-app/main/default/objects/Case/fields/ACT_Category_1__c.field-meta.xml
<CustomField>
    <fullName>ACT_Category_1__c</fullName>
    <label>ACT Category 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Access</fullName>
            </value>
            <value>
                <fullName>Tax Items</fullName>
            </value>
            <value>
                <fullName>Billing Questions</fullName>
            </value>
            <value>
                <fullName>Payroll Service</fullName>
            </value>
            <value>
                <fullName>Product Service</fullName>
            </value>
            <value>
                <fullName>Accountant Suggestion</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Positive Survey</fullName>
            </value>
            <value>
                <fullName>Negative Survey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Year-End</fullName>
            </value>
            <value>
                <fullName>Not CPA Referred</fullName>
            </value>
            <value>
                <fullName>No Issues (taxes/online)</fullName>
            </value>
            <value>
                <fullName>Tax Issues</fullName>
            </value>
            <value>
                <fullName>Client opted out of Taxpay</fullName>
            </value>
            <value>
                <fullName>Online Access Issues</fullName>
            </value>
            <value>
                <fullName>Taxpay/Online Issues</fullName>
            </value>
            <value>
                <fullName>Change in Platform</fullName>
            </value>
            <value>
                <fullName>Client Retention - 1st Attempt</fullName>
            </value>
            <value>
                <fullName>Client Retention - 2nd Attempt</fullName>
            </value>
            <value>
                <fullName>Missing Rev Share Info</fullName>
            </value>
            <value>
                <fullName>Inquiry / Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>