force-app/main/default/objects/Case/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>HRO Onboarding/Setup Process Cases for Master and Related Cases</description>
    <inlineHelpText>HRO Onboarding/Setup Process Cases for Master and Related Cases</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ESR_Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>30 Days Post Renewal</fullName>
            </value>
            <value>
                <fullName>Additional Client Info Req</fullName>
            </value>
            <value>
                <fullName>Addressed Questions</fullName>
            </value>
            <value>
                <fullName>Attestation</fullName>
            </value>
            <value>
                <fullName>Audit Approved</fullName>
            </value>
            <value>
                <fullName>Audit Failed</fullName>
            </value>
            <value>
                <fullName>Audit Passed</fullName>
            </value>
            <value>
                <fullName>Audit Rejected</fullName>
            </value>
            <value>
                <fullName>Audit Required</fullName>
            </value>
            <value>
                <fullName>Benefit Information</fullName>
            </value>
            <value>
                <fullName>Campaign Outbound Call</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Case &amp; Audit Complete</fullName>
            </value>
            <value>
                <fullName>Case &amp; Audit In Progress</fullName>
            </value>
            <value>
                <fullName>Case Audit</fullName>
            </value>
            <value>
                <fullName>Case Escalated</fullName>
            </value>
            <value>
                <fullName>Case Rejected</fullName>
            </value>
            <value>
                <fullName>Client Data Sheet</fullName>
            </value>
            <value>
                <fullName>Client Information Required</fullName>
            </value>
            <value>
                <fullName>Client Not Available/Call Back Required</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Client Updates In Progress</fullName>
            </value>
            <value>
                <fullName>Client Updates Required</fullName>
            </value>
            <value>
                <fullName>Conversion Audit - Approved</fullName>
            </value>
            <value>
                <fullName>Conversion Audit - Rejected</fullName>
            </value>
            <value>
                <fullName>DSR Resolved IRS Notice</fullName>
            </value>
            <value>
                <fullName>DSR Updated Yes Report</fullName>
            </value>
            <value>
                <fullName>EAO Onboarding/Setup</fullName>
            </value>
            <value>
                <fullName>ExpenseWire Onboarding/Setup</fullName>
            </value>
            <value>
                <fullName>First Call Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>