force-app/main/default/objects/Case/fields/Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>COE will use this contact if the primary contact is unavailable.</description>
    <label>Alternate Paychex Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Alternate Contact)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>