force-app/main/default/objects/Case/fields/App_Affected__c.field-meta.xml
<CustomField>
    <fullName>App_Affected__c</fullName>
    <description>This field is used to identify which application version the case issue is related too</description>
    <label>App Affected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Andriod</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>