force-app/main/default/objects/Case/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <formula>Account.HR_Manager__r.FirstName + &quot; &quot; +  Account.HR_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area Manager</label>
    <type>Text</type>
</CustomField>