force-app/main/default/objects/Case/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>This field is only editable by the people in the list. There is a permission set called Case Assigned To Field Write Access that will need to be maintained if the people with edit access should change.</description>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Assignment</fullName>
            </value>
            <value>
                <fullName>Deb Livingston</fullName>
            </value>
            <value>
                <fullName>Jim Monney</fullName>
            </value>
            <value>
                <fullName>Hank Ralston</fullName>
            </value>
            <value>
                <fullName>Lisi Reenstierna</fullName>
            </value>
            <value>
                <fullName>Dan Siler</fullName>
            </value>
            <value>
                <fullName>Kathleen Wallrich</fullName>
            </value>
            <value>
                <fullName>Analyst Team</fullName>
            </value>
            <value>
                <fullName>Greg Barkau</fullName>
            </value>
            <value>
                <fullName>Sheri Hakes</fullName>
            </value>
            <value>
                <fullName>Veda Morraitis</fullName>
            </value>
            <value>
                <fullName>Eric Crozier</fullName>
            </value>
            <value>
                <fullName>Melanie Schraver</fullName>
            </value>
            <value>
                <fullName>Katrina Kolstad</fullName>
            </value>
            <value>
                <fullName>Roseann Castro</fullName>
            </value>
            <value>
                <fullName>Spencer Ungerleider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>