force-app/main/default/objects/Case/fields/Assigned_UC_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_UC_Agent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Specialist</label>
    <length>40</length>
    <type>Text</type>
</CustomField>