force-app/main/default/objects/Case/fields/Batch_Process_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Process_ID__c</fullName>
    <description>ID assigned to all records created or modified by a single batch method</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Process ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>