force-app/main/default/objects/Case/fields/BeneTrac_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>BeneTrac_Cancel_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ben Admin Cancel Date</label>
    <type>Date</type>
</CustomField>