force-app/main/default/objects/Case/fields/Bis_ID__c.field-meta.xml
<CustomField>
    <fullName>Bis_ID__c</fullName>
    <externalId>true</externalId>
    <label>Bis ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>