force-app/main/default/objects/Case/fields/Branch_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_Client_ID__c</fullName>
    <description>Used by MMS Ops to display the Br/Clt ID on the Case record.  This field is also used in the validation rule that updates the subject with the record type and br/clt id on save.</description>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Client ID</label>
    <type>Text</type>
</CustomField>