force-app/main/default/objects/Case/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <label>Branch ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>