force-app/main/default/objects/Case/fields/BU_Tester__c.field-meta.xml
<CustomField>
    <fullName>BU_Tester__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BU Tester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>