force-app/main/default/objects/Case/fields/Call_Topic__c.field-meta.xml
<CustomField>
    <fullName>Call_Topic__c</fullName>
    <label>Call Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401(k) Audit Issue</fullName>
            </value>
            <value>
                <fullName>5500/8955/5558</fullName>
            </value>
            <value>
                <fullName>Account Balance</fullName>
            </value>
            <value>
                <fullName>Account Balance - HSA</fullName>
            </value>
            <value>
                <fullName>Billing/Pricing</fullName>
            </value>
            <value>
                <fullName>Billing / Pricing 401k</fullName>
            </value>
            <value>
                <fullName>Billing / Pricing S125</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Client Relations</fullName>
            </value>
            <value>
                <fullName>Client Retention</fullName>
            </value>
            <value>
                <fullName>Client Retention  401k</fullName>
            </value>
            <value>
                <fullName>Client Retention IRA</fullName>
            </value>
            <value>
                <fullName>Client Retention S125</fullName>
            </value>
            <value>
                <fullName>Communication needed with Vendor</fullName>
            </value>
            <value>
                <fullName>Compliance - 401(k)</fullName>
            </value>
            <value>
                <fullName>Compliance 401k</fullName>
            </value>
            <value>
                <fullName>Compliance - S125</fullName>
            </value>
            <value>
                <fullName>Compliance Test S125</fullName>
            </value>
            <value>
                <fullName>Contributions</fullName>
            </value>
            <value>
                <fullName>Contributions – Employee</fullName>
            </value>
            <value>
                <fullName>Contributions - Employee 401k</fullName>
            </value>
            <value>
                <fullName>Contributions – Employer</fullName>
            </value>
            <value>
                <fullName>Contributions - Employer 401k</fullName>
            </value>
            <value>
                <fullName>Contributions S125</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card Status</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Distribution - HSA</fullName>
            </value>
            <value>
                <fullName>Documents/Reports</fullName>
            </value>
            <value>
                <fullName>Employee Contributions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>