force-app/main/default/objects/Case/fields/Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>Case_Detail__c</fullName>
    <label>Case Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amethyst</fullName>
                <color>#993399</color>
                <label>Amethyst</label>
            </value>
            <value>
                <fullName>Aquamarine</fullName>
                <color>#3366FF</color>
                <label>Aquamarine</label>
            </value>
            <value>
                <fullName>Diamond</fullName>
                <color>#DDDDDD</color>
                <label>Diamond</label>
            </value>
            <value>
                <fullName>Jade</fullName>
                <color>#009900</color>
                <label>Jade</label>
            </value>
            <value>
                <fullName>Opal</fullName>
                <color>#FF99FF</color>
                <label>Opal</label>
            </value>
            <value>
                <fullName>Orange Sapphire</fullName>
                <color>#FF9900</color>
                <label>Orange Sapphire</label>
            </value>
            <value>
                <fullName>Ruby</fullName>
                <color>#FF0000</color>
                <label>Ruby</label>
            </value>
            <value>
                <fullName>Yellow Topaz</fullName>
                <color>#FFFF66</color>
                <label>Yellow Topaz</label>
            </value>
            <value>
                <fullName>Branch/Payroll</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>HRG/AM</fullName>
            </value>
            <value>
                <fullName>Internal Department</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Work Product</fullName>
            </value>
            <value>
                <fullName>Research &amp; communication</fullName>
            </value>
            <value>
                <fullName>Research &amp; Work product</fullName>
            </value>
            <value>
                <fullName>Communication &amp; work product</fullName>
            </value>
            <value>
                <fullName>No Sale</fullName>
            </value>
            <value>
                <fullName>Plan Moved to SEP</fullName>
            </value>
            <value>
                <fullName>PEP Rejection</fullName>
            </value>
            <value>
                <fullName>FSM Discovered Knockout</fullName>
            </value>
            <value>
                <fullName>Plan Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>