force-app/main/default/objects/Case/fields/ccpe_r__Utilization_Category__c.field-meta.xml
<CustomField>
    <fullName>ccpe_r__Utilization_Category__c</fullName>
    <label>Utilization Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>