force-app/main/default/objects/Case/fields/Client_Contact_Payroll_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Payroll_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Contact/Payroll Contact</label>
    <length>150</length>
    <type>Text</type>
</CustomField>