force-app/main/default/objects/Case/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <formula>RIGHT(Branch_Client_ID__c, (LEN(Branch_Client_ID__c) - FIND(&quot;-&quot;, Branch_Client_ID__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>