force-app/main/default/objects/Case/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>