force-app/main/default/objects/Case/fields/Client_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Start_Date__c</fullName>
    <description>manually populated Start date - we tried using the Product and Services start date for PEO but it was not the same as what is showing in Core Advanced. They need the date value from Core Advanced.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Start Date</label>
    <type>Date</type>
</CustomField>