force-app/main/default/objects/Case/fields/Clocks_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Clocks_Ordered__c</fullName>
    <description>Used to note if clocks were ordered by the client upon creating the Onboarding case.</description>
    <label>Clocks Ordered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Badge</fullName>
            </value>
            <value>
                <fullName>Yes - Biometric</fullName>
            </value>
            <value>
                <fullName>Yes - Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>