force-app/main/default/objects/Case/fields/CloneId__c.field-meta.xml
<CustomField>
    <fullName>CloneId__c</fullName>
    <description>Id of Case that this was cloned from OR if the CloneId is the same as CaseID, then the case was cloned.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CloneId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>