force-app/main/default/objects/Case/fields/Code_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Lost_Date__c</fullName>
    <description>HR Solutions requested field via Case #10014493</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Lost Date</label>
    <type>Date</type>
</CustomField>