force-app/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Display email address of contact for Extraction Request. Used by MPSC Implementation data collection.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>