force-app/main/default/objects/Case/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <description>Used by the Time and Attendance department to mark the stage of the onboarding process</description>
    <label>Current Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(1 0f 7)Paperwork with Contractual</fullName>
            </value>
            <value>
                <fullName>(10 of 12) First Payroll Run</fullName>
            </value>
            <value>
                <fullName>(11 of 12) Post Run Debrief</fullName>
            </value>
            <value>
                <fullName>(12 of 12) Transfer to Ongoing Support</fullName>
            </value>
            <value>
                <fullName>(1 of 1) Waiting for 1st Tax Year</fullName>
            </value>
            <value>
                <fullName>(1 of 12) Sales Rep Conducting Needs Analysis</fullName>
            </value>
            <value>
                <fullName>(1 of 2) Introductory Call</fullName>
            </value>
            <value>
                <fullName>(1 of 2) Waiting for Appointment</fullName>
            </value>
            <value>
                <fullName>(1 of 3) Client in onboarding</fullName>
            </value>
            <value>
                <fullName>(1 of 3) Send Welcome Email</fullName>
            </value>
            <value>
                <fullName>(1 of 4) Approval Copy Sent</fullName>
            </value>
            <value>
                <fullName>(1 of 4) Client Load Received</fullName>
            </value>
            <value>
                <fullName>(1 of 4) Introductory Call</fullName>
            </value>
            <value>
                <fullName>(1 of 4) PLE Welcome Call</fullName>
            </value>
            <value>
                <fullName>(1 of 4) Waiting on IC</fullName>
            </value>
            <value>
                <fullName>(1 of 4) Waiting on Turnover Call</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Client Load Received</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Kickoff Call</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Load Received - Welcome Call In Progress</fullName>
            </value>
            <value>
                <fullName>(1 of 5) New Case Received</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Schedule Training</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Welcome Call</fullName>
            </value>
            <value>
                <fullName>(1 of 5) Welcome Email</fullName>
            </value>
            <value>
                <fullName>(1 of 6) Documentation Received/ Welcome Letter Sent</fullName>
            </value>
            <value>
                <fullName>(1 of 6) Internal Notification Email</fullName>
            </value>
            <value>
                <fullName>(1 of 6) Introductory Call</fullName>
            </value>
            <value>
                <fullName>(1 of 6) Welcome Call</fullName>
            </value>
            <value>
                <fullName>(1 of 7) Load received – IS verifying load docs</fullName>
            </value>
            <value>
                <fullName>(1 of 7) Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>(1 of 8) Plan received - Waiting on IC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>