force-app/main/default/objects/Case/fields/Days_in_Current_ESR_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_ESR_Risk_Level__c</fullName>
    <formula>TODAY ()- DATEVALUE( ESR_Risk_Level_c__c)</formula>
    <label>Days in Current ESR Risk Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>