force-app/main/default/objects/Case/fields/Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denied_Reason__c</fullName>
    <label>Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing SSA</fullName>
            </value>
            <value>
                <fullName>Missing Bank Info</fullName>
            </value>
            <value>
                <fullName>Missing Order Form</fullName>
            </value>
            <value>
                <fullName>Missing Client Information</fullName>
            </value>
            <value>
                <fullName>Missing Multiple Documents</fullName>
            </value>
            <value>
                <fullName>Missing Pricing Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>