force-app/main/default/objects/Case/fields/Discrepancy_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Sub_Type__c</fullName>
    <label>Discrepancy Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discrepancy_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Closure</fullName>
            </value>
            <value>
                <fullName>Account Number</fullName>
            </value>
            <value>
                <fullName>Additional pay</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Address changes</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Administrative Fees</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Amended Order</fullName>
            </value>
            <value>
                <fullName>Amended Returns</fullName>
            </value>
            <value>
                <fullName>Annual Election Amount Exceeded</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Approve/Reject Photo Punch</fullName>
            </value>
            <value>
                <fullName>ASO Client</fullName>
            </value>
            <value>
                <fullName>Assign Badges&quot;</fullName>
                <label>Assign Badges</label>
            </value>
            <value>
                <fullName>Back Date</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Billing is being paid from assets – update to PAC or forf?</fullName>
            </value>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>Biometric Functionality</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Can’t Locate</fullName>
            </value>
            <value>
                <fullName>Change Time</fullName>
            </value>
            <value>
                <fullName>Check date changes</fullName>
            </value>
            <value>
                <fullName>Check Requests</fullName>
            </value>
            <value>
                <fullName>Client Error</fullName>
            </value>
            <value>
                <fullName>Client Level SUI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>